# dls_python3_template_module

./: .gitlab-ci.yml  .travis.yml  CONTRIBUTING.rst  Pipfile  README.rst  my_template.yml  setup.cfg
dls_python3_template_module/: __init__.py  _version_git.py  cli.py  command.py
docs/: conf.py  index.rst
docs/reference/: api.rst
tests/: test_boilerplate_removed.py  test_command.py  test_dls_python3_template_module.py  test_dls_python_template_module.py  test_versiongit.py
