[metadata]
name = dls_python3_template_module
description = Python3 template including recommended code styling and versioning
url = https://github.com/niamhdougan/dls_python3_template_module
author = Author
author_email = author@diamond.ac.uk
license = Apache License 2.0
long_description = file: README.rst
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
packages = find:
# install_requires = cothread
# If you want to include data files in packages,
# set this to True and include a MANIFEST.in file.
include_package_data = False

[options.entry_points]
# Include a command line script
console_scripts =
    dls_python3_template_module = dls_python3_template_module.command:main

[options.packages.find]
# Don't include our tests directory in the distribution
exclude = tests

[isort]
# https://black.readthedocs.io/en/stable/the_black_code_style.html?highlight=isort#how-black-wraps-lines
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
line_length=88

[flake8]
# Make flake8 respect black's line length (default 88),
max-line-length = 88
extend-ignore =
    # See https://github.com/PyCQA/pycodestyle/issues/373
    E203,

[tool:pytest]
# Run pytest with all our checkers, and don't spam us with massive tracebacks on error
addopts = --tb=native -vv --flake8 --mypy
